# fastapi-admin-kit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  example.py  example_ai.py  example_sqlmodel.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: docs.yml  release.yml  tests.yml
api/admin/: index.html
api/auth/: index.html
api/widgets/: index.html
contributing/: index.html
docs/: contributing.md  index.md  upcoming-features.md
docs/api/: admin.md  auth.md  widgets.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: alembic-setup.md  audit-logging.md  auth-rbac.md  cli.md  command-palette.md  dashboard.md  features.md  filters.md  inline-editing-actions.md  json-api.md  model-registration.md  navigation.md  pagination.md  plugins.md  storage.md  themes.md  widgets-forms.md
fastapi_admin_kit/: __init__.py  admin.py  cli.py  db.py  exceptions.py  field_types.py  flash.py  inline.py  inspection.py  modeladmin.py  nav.py  registry.py  router.py  search_utils.py  types.py  validation.py  views.py
fastapi_admin_kit/actions/: __init__.py  base.py  registry.py
fastapi_admin_kit/admin/: __init__.py  admin_config.py  admin_database.py  admin_router.py  admin_template.py  builtin_models.py  core.py  decorators.py  state.py
fastapi_admin_kit/ai/: __init__.py  agent.py  builtin_tools.py  config.py  conversation.py  dashboard.py  deps.py  model_agent.py  plugin.py  tools.py  usage.py
fastapi_admin_kit/api/: __init__.py  auth.py  crud.py  deps.py  roles.py  schema_generator.py  schemas.py  search.py
fastapi_admin_kit/audit/: __init__.py  context.py  diff.py  event_bus.py  events.py  listener.py  logger.py  middleware.py  models.py  sqlalchemy_logger.py
fastapi_admin_kit/auth/: __init__.py  backend.py  csrf.py  dependencies.py  hasher.py  identity.py  mixins.py  models.py  password.py  permissions.py  protocol.py  ratelimit.py  router.py  session.py  totp.py  types.py  views.py
fastapi_admin_kit/backends/: __init__.py  protocols.py  sqlalchemy.py
fastapi_admin_kit/cli/: __init__.py  __main__.py  helpers.py  migrate.py  permissions.py  scaffold.py  user.py
fastapi_admin_kit/config/: __init__.py  audit.py  auth.py  behavior.py  database.py  nav.py  storage.py  theme.py  ui.py
fastapi_admin_kit/dashboard/: __init__.py
fastapi_admin_kit/export_import/: __init__.py  base.py  csv_export.py  csv_import.py  excel.py  registry.py
fastapi_admin_kit/filters/: __init__.py  base.py  registry.py
fastapi_admin_kit/form/: __init__.py  pipeline.py  types.py
fastapi_admin_kit/inspection/: __init__.py  registry.py  types.py
fastapi_admin_kit/models/: __init__.py  base.py
fastapi_admin_kit/pagination/: __init__.py  base.py  cursor.py  dynamic.py  offset.py
fastapi_admin_kit/plugins/: __init__.py
fastapi_admin_kit/registry/: __init__.py  core.py  validation.py
fastapi_admin_kit/schemas/: __init__.py  builtin.py  schema.py
fastapi_admin_kit/storage/: __init__.py  base.py  local.py
fastapi_admin_kit/templates/: base.html
fastapi_admin_kit/ui/: __init__.py  types.py
fastapi_admin_kit/views/: __init__.py  audit.py  bulk.py  class_views.py  context.py  dashboard.py  delete.py  extra.py  factory.py  file_handler.py  form.py  list.py  list_context.py  model_saver.py  profile.py  protocols.py  renderers.py  roles.py  search.py  settings.py  sidebar.py  totp.py  users.py
fastapi_admin_kit/widgets/: __init__.py  base.py  inputs.py  registry.py  relation.py  resolver.py
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/alembic-setup/: index.html
guide/audit-logging/: index.html
guide/auth-rbac/: index.html
guide/cli/: index.html
guide/command-palette/: index.html
guide/dashboard/: index.html
guide/features/: index.html
guide/filters/: index.html
guide/inline-editing-actions/: index.html
guide/json-api/: index.html
guide/model-registration/: index.html
guide/navigation/: index.html
guide/pagination/: index.html
search/: search_index.json
tests/: conftest.py  test_2fa.py  test_admin.py  test_admin_components.py  test_admin_config.py  test_ai_agent.py  test_audit.py  test_auth.py  test_auth_routes.py  test_dashboard.py  test_inspection.py  test_inspector.py  test_jwt.py  test_models.py  test_nav.py  test_pagination.py  test_permissions.py  test_profile.py  test_registry.py  test_role_routes.py  test_routes.py  test_schema_materialization.py  test_search.py  test_security.py  test_security_audit.py  test_session_security.py  test_shell_layout.py  test_storage.py  test_user_management.py  test_validator.py  test_view_factory.py  test_widget_resolver.py  test_widgets.py
upcoming-features/: index.html
(+58 files in other folders)
